[gd_scene load_steps=9 format=3 uid="uid://bj562ggiykkx7"]

[ext_resource type="Theme" uid="uid://d27558cdkugpr" path="res://Assets/Resources/MainTheme.tres" id="1_hi62c"]
[ext_resource type="Script" path="res://Scripts/Components/MediaControls/Queue/QueueSelection.gd" id="2_wpo0p"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pyrkb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mnhta"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pgtip"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ffgl3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_jkdkr"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_qw5i3"]

[node name="QueueSelection" type="Control"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 3
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("2_wpo0p")

[node name="Panel" type="PanelContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme = ExtResource("1_hi62c")
theme_type_variation = &"ListItem1"

[node name="Button" type="Button" parent="Panel"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_pyrkb")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_mnhta")
theme_override_styles/hover = SubResource("StyleBoxEmpty_pgtip")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ffgl3")
theme_override_styles/normal = SubResource("StyleBoxEmpty_jkdkr")
metadata/_edit_use_anchors_ = true

[node name="Cont" type="HBoxContainer" parent="Panel"]
layout_mode = 2
mouse_filter = 2

[node name="CheckParent" type="Control" parent="Panel/Cont"]
visible = false
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
mouse_filter = 2

[node name="CheckBox" type="CheckBox" parent="Panel/Cont/CheckParent"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -12.0
offset_top = -12.0
offset_right = 12.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
alignment = 1
icon_alignment = 1

[node name="VSeparator" type="VSeparator" parent="Panel/Cont"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_qw5i3")

[node name="Name" type="Label" parent="Panel/Cont"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Decently long song name here
"
clip_text = true
text_overrun_behavior = 1
max_lines_visible = 1
metadata/_edit_use_anchors_ = true

[node name="Artist" type="Label" parent="Panel/Cont"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Artist and other people
"
clip_text = true
text_overrun_behavior = 1
max_lines_visible = 1
metadata/_edit_use_anchors_ = true

[connection signal="button_down" from="Panel/Button" to="." method="_on_button_button_down"]
[connection signal="button_up" from="Panel/Button" to="." method="_on_button_button_up"]
[connection signal="toggled" from="Panel/Cont/CheckParent/CheckBox" to="Panel" method="Select"]
